<resources>
    <string name="app_name">Movin</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email_example">example@domain.com</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="finish">Finish</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="search_field_hints">Street / Company / Phone number</string>
    <string name="about_movin">Adress\nMOVIN Huvudkontor\nMOVIN AB\nVikingavägen 3\nBox 123 \n461 78 SJUNTORP\n\nE-post: info@movin.se\nVäxel: +46 (0)123-456 78\nFax: +46 (0)123-456 87</string>
    <string name="sign_out">Sign out</string>
    <string name="change_password">Change password</string>
    <string name="change_theme">Change theme</string>
    <string name="password">password</string>
    <string name="or">Or</string>
    <string name="movin_logotype">Movin logotype</string>
    <string name="title_activity_maps">Map</string>
    <string name="about_button">About button</string>
    <string name="settings_button">Settings button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_name">Company name</string>
    <string name="contact_number">Contact number</string>
    <string name="company_adress">Company address</string>
    <string name="contact_e_mail">Contact E-mail</string>
    <string name="organisation_number">Organisation number</string>
    <string name="cleaning">Cleaning</string>
    <string name="https_www_company_com">https://www.company.com</string>
    <string name="moving">Moving</string>
    <string name="business_type">Business type</string>
    <string name="org_number">Org number</string>
    <string name="contact_information">Contact information</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="move">Move</string>
    <string name="clean">Clean</string>
    <string name="company_semicolon">Company:</string>
    <string name="organisation_number_semicolon">Organisation number:</string>
    <string name="company_logotype_image">Company Logotype Image</string>
    <string name="name">Name</string>
    <string name="review">Review...</string>
    <string name="address_semi_colon">Address:</string>
    <string name="review_text">Review text</string>
    <string name="review_name">Review name</string>
</resources>
