<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="20dp"
tools:context=".ProfileFragment">

<de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/user_avatar_im"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="8dp"
    android:src="@drawable/ic_person"
    app:civ_border_color="@color/prof"
    app:civ_border_width="2dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/company_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/user_avatar_im"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_avatar_im"
        tools:text="@string/company_name" />

<TextView
    android:id="@+id/company_adress_et"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/company_name_et"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="8dp"
    android:layout_toEndOf="@+id/user_avatar_im"
    android:text="@string/company_adress"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/company_org_number_et" />

<TextView
    android:id="@+id/company_org_number_et"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/company_adress_et"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="8dp"
    android:layout_toEndOf="@+id/user_avatar_im"
    android:text="@string/org_number"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/company_name_et" />


<TextView
    android:id="@+id/contact_information"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/company_org_number_et"
    android:layout_alignParentStart="true"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:text="@string/contact_information"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/company_adress_et" />


<TextView
    android:id="@+id/phone_number_et"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/contact_information"
    android:layout_alignParentStart="true"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:text="@string/phone_number"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/company_email_et" />

<TextView
    android:id="@+id/company_email_et"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/phone_number_et"
    android:layout_alignParentStart="true"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:text="@string/email_address"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/contact_information" />

<CheckBox
    android:id="@+id/move_cb"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/company_org_number_et"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="4dp"
    android:layout_marginTop="24dp"
    android:clickable="true"
    android:text="@string/move"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/phone_number_et" />

<CheckBox
    android:id="@+id/clean_cb"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/company_org_number_et"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:layout_toStartOf="@+id/move_cb"
    android:clickable="true"
    android:text="@string/clean"
    app:layout_constraintStart_toEndOf="@+id/move_cb"
    app:layout_constraintTop_toBottomOf="@+id/phone_number_et" />

</android.support.constraint.ConstraintLayout>


