<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SettingsFragment">

    <Button
        android:id="@+id/sign_out_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/bottomNavAndToolbar"
        android:elevation="4dp"
        android:text="@string/sign_out" />

    <Button
        android:id="@+id/change_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_out_btn"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/bottomNavAndToolbar"
        android:elevation="4dp"
        android:text="@string/change_password" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:background="@color/switchBackground"
        android:elevation="4dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/change_theme"
        android:textSize="14sp" />
</RelativeLayout>