<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ProfileFragment">

    <RelativeLayout
        android:id="@+id/company_page_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/company_profile_logo_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/company_logotype_image"
            app:srcCompat="@drawable/ic_person" />

        <TextView
            android:id="@+id/company_profile_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/company_profile_star_rating_rb"
            android:layout_toEndOf="@+id/company_profile_logo_iv"
            android:text="@string/company_semicolon" />

        <TextView
            android:id="@+id/company_profile_org_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_profile_name_tv"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/company_profile_logo_iv"
            android:text="@string/organisation_number_semicolon" />

        <CheckBox
            android:id="@+id/company_profile_clean_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_profile_logo_iv"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/company_profile_move_cb"
            android:clickable="false"
            android:text="@string/clean" />

        <CheckBox
            android:id="@+id/company_profile_move_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_profile_logo_iv"
            android:layout_alignParentStart="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:clickable="false"
            android:text="@string/move" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/company_profile_add_review_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_profile_star_rating_rb"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            app:elevation="4dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_review" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/company_profile_phone_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_profile_star_rating_rb"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/company_profile_add_review_fab"
            android:clickable="true"
            android:focusable="true"
            app:elevation="4dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_phone" />

        <RatingBar
            android:id="@+id/company_profile_star_rating_rb"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:numStars="5"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/company_profile_contact_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_profile_move_cb"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/contact_information" />

        <TextView
            android:id="@+id/company_profile_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_profile_email_tv"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Address: " />

        <TextView
            android:id="@+id/company_profile_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_profile_contact_info_tv"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Email: " />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/review_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/company_page_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_page_layout" />

</android.support.constraint.ConstraintLayout>